fichero de configuracion prac7_config_rip.sh iniciado

--- a/Redes/practica7/dockerfile_gsx_prac7
+++ b/Redes/practica7/dockerfile_gsx_prac7
@@ -4,7 +4,7 @@ MAINTAINER Adrian_GSX
 RUN apt update
 RUN apt-get install -y --no-install-recommends \
 dnsutils ifupdown iproute2 iptables iputils-ping isc-dhcp-client nano procps rsyslog tcpdump \
-initscripts quagga iputils-ping traceroute
+initscripts quagga-ripd iputils-ping traceroute
 WORKDIR /root
 ADD ./prac7_config_rip.sh /root
 CMD [ "/bin/bash" ]
