--- a/Redes/practica7/dockerfile_gsx_prac7
+++ b/Redes/practica7/dockerfile_gsx_prac7
@@ -3,7 +3,7 @@ FROM debian:buster-slim
 MAINTAINER Adrian_GSX
 RUN apt update
 RUN apt-get install -y --no-install-recommends \
-dnsutils ifupdown iproute2 iptables iputils-ping isc-dhcp-client nano procps rsyslog tcpdump \
+dnsutils iproute2 iptables iputils-ping procps tcpdump \
 initscripts quagga-ripd iputils-ping traceroute
 WORKDIR /root
 ADD ./prac7_config_rip.sh /root
